XMLtoCSV/objects/unpackaged/objects/KOL_Publication__c.object
<CustomObject>
    <fields>
        <fullName>KOL_Conf_Yr__c</fullName>
        <label>Conference Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KOL_Conference__c</fullName>
        <label>Conference Name</label>
        <picklist>
            <picklistValues>
                <fullName>AACR  (Philadelphia, US)  2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AACR-Advances in BC** 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCP (San Fran, US)  2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCP (US) 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AONN (Atlanta, US)  2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCO (Chicago, US)  2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCO (US) – LB  1, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASCO (US) May. 29-Jun. 2 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASH (Orlando, US)  015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASH (US) Dec. 5-8 DL: Aug 4. 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASH Hem Malignancies  2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASH Hem Malignancies2   2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVBCC (US) May. 3-6 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMT Tandem  (San Diego, US)  2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSH (UK)  Apr. 20-22 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DGHO (Switzerland)  , 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHA (Austria) – LB   2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHA  (Vienna, Austria)   2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAA (Aus/NZ) Oct. 18-21 DL: TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOPA  (Austin, US)   2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICHM (US) Feb. 20-21 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICML (Lugano) Jun. 17-20 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMW (Rome, Italy)   2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISPOR (US) May. 16-20 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iwCLL (Australia)   2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSH (Japan)  2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSMO (Japan) 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keystone (US)  Feb. 8-13 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lymphoma &amp; Myeloma  (New York, US) 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFH (France)   2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KOL_Number_del__c</fullName>
        <label>KOL</label>
        <referenceTo>PCYC_KOL__c</referenceTo>
        <relationshipName>KOL_Number_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>KOL_Publication_Status__c</fullName>
        <label>Publication Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Encores</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KOL_Publication__c</fullName>
        <label>Publication Name</label>
        <type>TextArea</type>
    </fields>
    <label>KOL Publication</label>
    <nameField>
        <displayFormat>PUB-{00000}</displayFormat>
        <label>KOL_Pub_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KOL Publications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>